# songml

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SESSION_CONTEXT.md  tmp-design-format-feature.md  tmp-design-to-code-reconcile.md  tmp-help-and-shell-completion.md  tmp-midi-out-dev-plan.md  tmp-reharm-youve-got-a-way.md  wunderkind.mid
.github/: copilot-instructions.md
.github/workflows/: ci.yml
abc-test/: smoke-1.abc  test1.abc
abc-test/.github/: copilot-instructions.md
ableton-chord-extract/: als-convert-test
docs/: plan-astAndParser.prompt.md  songml-ast.md  songml-create.md  songml-midi-generation.md  songml-syntax.md  songml-to-abc.md  songml_design_manifesto.md
samples/: .gitignore  wunderkind.md  wunderkind.mid  wunderkind.songml  youve-got-a-way-m12.abc  youve-got-a-way-m3.abc  youve-got-a-way.abc  youve-got-a-way.html  youve-got-a-way.songml
songml-utils/: .gitignore  README.md  pyproject.toml
songml-utils/docs/: index.md
songml-utils/src/songml_utils/: __init__.py  abc_cli.py  abc_exporter.py  als_cli.py  als_parser.py  ast.py  bashcompletion.py  chord_sheet.py  chord_voicings.py  chords_midi_cli.py  create.py  formatter.py  html_exporter.py  midi_cli.py  midi_exporter.py  midi_inspector.py  midi_inspector_cli.py  parser.py  validate.py  voicing_validator.py  web_server.py
songml-utils/src/songml_utils/data/: bash_completion.sh  chord_voicings.tsv  viewer.html  voicing-validator.py
songml-utils/src/songml_utils/data/templates/: basic.songml
songml-utils/tests/: conftest.py  test_abc_cli.py  test_abc_exporter.py  test_als_parser.py  test_bashcompletion.py  test_chord_sheet.py  test_create.py  test_formatter.py  test_midi_cli.py  test_midi_exporter.py  test_midi_inspector.py  test_midi_inspector_cli.py  test_parser.py  test_transpose.py  test_validate.py  test_voicing_validator.py  test_web_server.py
