[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "songml-utils"
version = "0.1.0"
description = "Utilities for working with SongML files"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
songml-format = "songml_utils.formatter:main"
songml-validate = "songml_utils.validate:main"
